[gd_scene load_steps=5 format=3 uid="uid://dk3hdwc4lhit7"]

[ext_resource type="Script" path="res://scenes/box/box.gd" id="1_ixucv"]
[ext_resource type="PackedScene" uid="uid://b4w5w1nncu4js" path="res://scenes/wormhole_inside/wormhole_inside.tscn" id="2_0k25y"]

[sub_resource type="BoxMesh" id="BoxMesh_bjgms"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rlgj6"]

[node name="Box" type="Node3D"]
script = ExtResource("1_ixucv")
wormhole_inside_scene = ExtResource("2_0k25y")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)
mesh = SubResource("BoxMesh_bjgms")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_rlgj6")

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
